@@ -27,6 +27,9 @@ PHP                                                                        NEWS
   . Fixed bug #70808 (array_merge_recursive corrupts memory of unset items).
     (Laruence)
 
+- Streams/Socket
+  . Add IPV6_V6ONLY constant / make it usable in stream contexts. (Bob)
+
 - XSL:
   . Fixed bug #70678 (PHP7 returns true when false is expected). (Felipe)
 
